2006-03-04  Daniel Wagner  <wagi@monom.org>

	* src/avdevice.cpp: Added 'verbose' argument to constructor
	and set debug level to DEBUG_LEVEL_VERBOSE if 'verbose'
	is true, e.g enables verbose mode with '-v' argument passed
	to test-freebob.
	* src/avdevice.h: Likewsise.
	* src/avdevicesubunit.cpp: Likewsise.
	* src/avdevicesubunit.h: Likewsise.
	* src/avplug.cpp: Likewsise.
	* src/avplug.h: Likewsise.
	* src/devicemanager.cpp: Likewsise.
	* src/debugmodule/debugmodule.cpp: Likewsise.
	* src/debugmodule/debugmodule.h: Likewsise.
	* src/debugmodule/test_debugmodule.cpp: Likewsise.
	
	* src/avdevice.cpp: eAP_* renamed into eAPA_*.
	EAvPlugDirection and EAvPlugType introduced. All PlugAddress:ePD_ and 
	ExtendedPlugInfoPlugTypeSpecificData::eEPIPT_* exchanged with corresponding
	AvPlug definitions.
	* src/avdevice.h: Likewise.
	* src/avdevicesubunit.cpp: Likewise.
	* src/avdevicesubunit.h: Likewise.
	* src/avdevicexml.cpp: Likewise.
	* src/avplug.cpp: Likewise.
	* src/avplug.h: Likewise.

2006-03-02  Daniel Wagner  <wagi@monom.org>

	* src/avplug.cpp (discoverStreamFormat): Sanity check turned
	into warning.

	* configure.ac: bumb minor version to 0.4

	* src/libfreebobavc/avc_extended_cmd_generic.h: plugAddressPlugDirectionToString
	and plugAddressAddressModeToString added.
	* src/libfreebobavc/avc_extended_cmd_generic.cpp: Likewise.

	* src/avplug.h: Enum EAvPlugType renamed to EAvPlugAddressType.
	getPlugAddressType added. getPlugType returns now real plug type.
	(class AvPlugManager): getPlugByType added.

	* src/avdevice.h: getPlugByType added.
	* src/avdevice.cpp: Likewise.
	(discoverSyncModes): Use getPlugByType instead
	of hardcoded id to find sync plugs.

	* src/devicemanager.h: Verbose argument not in constructor
	instead in discover method.
	* src/devicemanager.cpp: Likewise.

	* libfreebob/freebob.h (freebob_discover_devices): Verbose argument
	added.
	* src/libfreebobstreaming/freebob_streaming.c: Likewise.
	* src/freebob.cpp: Likewise.